--- a/HackAThon/app/src/main/res/layout/home_screen.xml
+++ b/HackAThon/app/src/main/res/layout/home_screen.xml
@@ -1,13 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent" >
 
-    <TextView
-        android:id="@+id/textView"
+    <ImageView
+        android:id="@+id/logo"
         android:layout_width="match_parent"
-        android:layout_height="144dp"
-        android:text="TextView"
-        android:textSize="36sp" />
-</LinearLayout>
+        android:layout_height="wrap_content"
+        android:contentDescription="@string logo1"
+        android:srcCompat="@drawable/Logo-Hackathon" />
+
+    <ImageView
+        android:id="@+id/map"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:contentDescription="@string map_bg"
+        android:srcCompat="@drawable/Template_Map" />
+
+</RelativeLayout>
