--- a/HackAThon/app/src/main/res/layout/home_screen.xml
+++ b/HackAThon/app/src/main/res/layout/home_screen.xml
@@ -1,20 +1,47 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent" >
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+
+    android:id="@+id/posterIndicatorView"
+    android:background="@drawable/template_map" >
 
     <ImageView
         android:id="@+id/logo"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:contentDescription="@string logo1"
-        android:srcCompat="@drawable/Logo-Hackathon" />
+        android:layout_width="254dp"
+        android:layout_height="126dp"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentRight="true"
+        android:layout_marginTop="70dp"
+        android:contentDescription="string logo"
+        android:foreground="@drawable/logo_hackathon"
+        tools:srcCompat="@drawable/logos" />
 
-    <ImageView
-        android:id="@+id/map"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:contentDescription="@string map_bg"
-        android:srcCompat="@drawable/Template_Map" />
+        <EditText
+            android:id="@+id/user_email"
+            android:layout_width="wrap_content"
+            android:layout_height="90px"
+            android:layout_marginLeft="50dp"
+            android:layout_marginRight="50dp"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentRight="true"
+            android:background="@color/common_google_signin_btn_text_dark_pressed"
+            android:layout_marginTop="300dp"
+            android:ems="10"
+            android:inputType="textEmailAddress" />
+
+        <EditText
+            android:id="@+id/user_password"
+            android:layout_width="wrap_content"
+            android:layout_height="90px"
+            android:layout_marginLeft="50dp"
+            android:layout_marginRight="50dp"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentRight="true"
+            android:background="@color/common_google_signin_btn_text_dark_pressed"
+            android:layout_marginTop="350dp"
+            android:ems="10"
+            android:inputType="textPassword" />
 
 </RelativeLayout>
