--- a/HackAThon/app/src/main/res/layout/map_primary.xml
+++ b/HackAThon/app/src/main/res/layout/map_primary.xml
@@ -13,7 +13,14 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context="com.example.styledmap.MapsActivityRaw"
-        map:cameraZoom="10" />
+        map:cameraZoom="15" />
+
+    private static final LatLng toronto = new LatLng(43.663376, -79.397599);
+    private Marker access = mMap.addMarker(new MarkerOptions()
+    .position(toronto)
+    .title("access")
+    .snippet("This location has a Ramp and Electronic Entrance")
+    .icon(BitmapDescriptorFactory.fromResource(R.drawable.access.png)));
 
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolbar"
