--- a/HackAThon/app/src/main/res/layout/signup_page.xml
+++ b/HackAThon/app/src/main/res/layout/signup_page.xml
@@ -4,7 +4,7 @@
 android:layout_width="wrap_content"
 android:layout_height="wrap_content"
 
-android:background="@drawable/template_map" >
+android:background="@drawable/map_bg1" >
 
     <ImageView
         android:id="@+id/logo"
@@ -12,7 +12,7 @@ android:background="@drawable/template_map" >
         android:layout_height="80dp"
         android:layout_centerHorizontal="true"
         android:layout_marginLeft="120dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="40dp"
         android:layout_marginRight="120dp"
         android:contentDescription="@string/string_logo"
         android:foreground="@drawable/logo_hackathon" />
@@ -24,7 +24,7 @@ android:background="@drawable/template_map" >
         android:paddingLeft="10dp"
         android:paddingRight="10dp"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="120dp"
+        android:layout_marginTop="150dp"
         android:textSize="30dp"
         android:textStyle="bold"
         android:text="Welcome!"
@@ -38,7 +38,7 @@ android:background="@drawable/template_map" >
     android:paddingLeft="10dp"
     android:layout_centerHorizontal="true"
     android:background="@color/common_google_signin_btn_text_dark_pressed"
-    android:layout_marginTop="200dp"
+    android:layout_marginTop="240dp"
     android:ems="10"
     android:hint="*Email"
     android:inputType="text" />
@@ -50,7 +50,7 @@ android:background="@drawable/template_map" >
     android:paddingLeft="10dp"
     android:layout_centerHorizontal="true"
     android:background="@color/common_google_signin_btn_text_dark_pressed"
-    android:layout_marginTop="250dp"
+    android:layout_marginTop="290dp"
     android:ems="10"
     android:hint="*Username"
     android:inputType="text" />
@@ -62,7 +62,7 @@ android:background="@drawable/template_map" >
         android:paddingLeft="10dp"
         android:layout_centerHorizontal="true"
         android:background="@color/common_google_signin_btn_text_dark_pressed"
-        android:layout_marginTop="300dp"
+        android:layout_marginTop="340dp"
         android:ems="10"
         android:hint="*Password"
         android:inputType="text" />
@@ -74,7 +74,7 @@ android:background="@drawable/template_map" >
         android:paddingLeft="10dp"
         android:layout_centerHorizontal="true"
         android:background="@color/common_google_signin_btn_text_dark_pressed"
-        android:layout_marginTop="350dp"
+        android:layout_marginTop="390dp"
         android:ems="10"
         android:hint="*Confirm Password"
         android:inputType="text" />
@@ -86,7 +86,7 @@ android:background="@drawable/template_map" >
         android:layout_centerHorizontal="true"
         android:layout_marginLeft="150dp"
         android:layout_marginRight="150dp"
-        android:layout_marginTop="410dp"
+        android:layout_marginTop="450dp"
         android:background="@color/common_google_signin_btn_text_dark_pressed"
 
         android:text="sign up" />
@@ -98,7 +98,7 @@ android:background="@drawable/template_map" >
         android:paddingLeft="10dp"
         android:paddingRight="10dp"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="470dp"
+        android:layout_marginTop="510dp"
         android:textColor="@color/common_google_signin_btn_text_dark_default"
         android:text="Already have an account? Login here" />
 
